--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,7 @@ a, a:hover, a:active {
 	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
-    
 }
-
 .grid figure figcaption {
 	padding: 2em;
 	color: #fff;
@@ -80,6 +78,7 @@ a, a:hover, a:active {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
+
 
 .grid figure figcaption::before,
 .grid figure figcaption::after {
@@ -122,7 +121,6 @@ a, a:hover, a:active {
 	letter-spacing: 1px;
 	font-size: 68.5%;
 }
-
 /*---------------*/
 /***** Oscar *****/
 /*---------------*/
@@ -259,6 +257,8 @@ p {
     margin-top: 8px;
 	position: relative;
 	z-index: 2;
+    width: 125px;	
+    height: auto;
 }
 
 .res-nav_click {
