--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ p {
     /*background: #bd0ea5;
     position: relative;
 	*/
-    background-image: url("https://mwi.usma.edu/wp-content/uploads/2021/06/AI-mil-1200-1200x640.jpg");
+    background-image: url("../img/AISeeHuman.jpeg");
 	height:650px;
 }
 
@@ -471,7 +471,7 @@ a.read_more:hover {
 
 #skills {
     padding: 60px 0px;
-    background-image: url("https://spectrum.ieee.org/media-library/concept-image-of-relativity-terran-r.jpg?id=27044732&width=1200&coordinates=0%2C4%2C0%2C4&height=600");
+    background-image: url("../img/spacexRocket.jpeg");
 }
 #skills h2{
   color: #fff;
