--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,8 @@ a, a:hover, a:active {
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
