--- a/css/style.css
+++ b/css/style.css
@@ -58,19 +58,20 @@ a:active {
 /* Common style */
 
 .grid figure {
-    position: relative;
+    position: static;
     float: left;
     overflow: hidden;
-    margin: 10px 1%;
-    min-width: 320px;
-    max-width: 480px;
-    max-height: 360px;
-    width: 48%;
+    margin: 1%;
+    min-width: 400px;
+    max-width: 680px;
+    height: 520px;
+    width: 50%;
     background: #3085a3;
-    text-align: center;
+    text-align: left;
+    text-transform: capitalize;
     cursor: pointer;
-    margin-left: auto;
-    margin-right: auto;
+    grid-row-gap: 10px;
+    grid-column-gap: 10px;    
 }
 
 .grid figure img {
@@ -78,28 +79,29 @@ a:active {
     display: block;
     min-height: 100%;
     max-width: 100%;
+    padding: 10px;
     opacity: 0.8;
 }
 
 .grid figure figcaption {
     padding: 2em;
     color: #fff;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    -webkit-backface-visibility: hidden;
+    text-transform: none;
+    font-size: 1.4em;
+    word-wrap: break-word;
     backface-visibility: hidden;
 }
 
 .grid figure figcaption::before,
 .grid figure figcaption::after {
-    pointer-events: none;
+    pointer-events: auto;
 }
 
 .grid figure figcaption,
 .grid figure figcaption>a {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    top: 0px;
+    left: 0px ;
     width: 100%;
     height: 100%;
 }
@@ -112,24 +114,30 @@ a:active {
 
 .grid figure figcaption>a {
     z-index: 1000;
-    text-indent: 200%;
-    white-space: nowrap;
+    text-indent: 20%;
+    white-space: normal;
     font-size: 0;
     opacity: 0;
 }
 
 .grid figure h2 {
     word-spacing: -0.15em;
-    font-weight: 300;
+    width: auto;
+    position: absolute;
+    top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    text-transform: capitalize;
+    font-weight: normal;
 }
 
 .grid figure h2 span {
-    font-weight: 800;
+    font-weight: normal;
 }
 
 .grid figure h2,
 .grid figure p {
-    margin: 0;
+    margin-left: -10%;
 }
 
 .grid figure p {
@@ -147,38 +155,33 @@ a:active {
 /*---------------*/
 
 figure.effect-oscar {
-    background: -webkit-linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
-    background: linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #3a342a 100%);
+    background: linear-gradient(45deg, #22682a 0%, #9b4a1b 40%, #fafafa 100%);
 }
 
 figure.effect-oscar img {
     opacity: 0.9;
-    -webkit-transition: opacity 0.35s;
     transition: opacity 0.35s;
 }
 
 figure.effect-oscar figcaption {
     padding: 3em;
     background-color: rgba(58, 52, 42, 0.7);
-    -webkit-transition: background-color 0.35s;
     transition: background-color 0.35s;
 }
 
 figure.effect-oscar figcaption::before {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    bottom: 30px;
-    left: 30px;
-    border: 1px solid #fff;
+    position: fixed;
+    top: 0px;
+    right: 13px;
+    bottom: 10px;
+    left: 10px;
+    border: 2px solid #fff;
     content: '';
 }
 
 figure.effect-oscar h2 {
-    margin: 20% 0 10px 0;
-    -webkit-transition: -webkit-transform 0.35s;
+    margin: 0 0 10px 0;
     transition: transform 0.35s;
-    -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
     color: #A3A3A3;
 }
@@ -186,14 +189,11 @@ figure.effect-oscar h2 {
 figure.effect-oscar figcaption::before,
 figure.effect-oscar p {
     opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
     transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: scale(0);
     transform: scale(0);
 }
 
 figure.effect-oscar:hover h2 {
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     color: #fff;
 }
@@ -222,7 +222,7 @@ figure.effect-oscar:hover img {
 body {
     background: #fff;
     font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: normal;
     color: #888888;
     margin: 0;
@@ -233,14 +233,15 @@ h2 {
     color: #222222;
     font-family: 'Raleway', sans-serif;
     font-weight: normal;
-    margin: 0px 0 25px 0;
+    margin: 0px 0 20px 0;
     text-align: center;
     text-transform: uppercase;
 }
 
 h3 {
     font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
+    font-weight: normal;
+    line-height: 40px;
     color: #222222;
     font-size: 18px;
     margin: 0 0 5px 0;
@@ -248,11 +249,12 @@ h3 {
 
 h6 {
     font-size: 16px;
+    line-height: 24px;
     color: #888888;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     text-align: center;
-    margin: 0 0 60px 0;
+    margin: 0 0 40px 0;
 }
 
 p {
@@ -536,7 +538,7 @@ a.read_more:hover {
 .skills_icon {
     width: 90px;
     height: 85px;
-    margin: 0px auto 25px;
+    margin: 0px auto 10px;
 }
 
 .skills_icon span {
@@ -714,10 +716,10 @@ a.contact_btn:hover {
 
 .Portfolio-box {
     text-align: center;
-    width: 350px;
+    width: 400px;
     overflow: hidden;
-    float: left;
-    padding: 12px 0px;
+    float: right;
+    padding: 12px 10px;
 }
 
 .Portfolio-box img {
@@ -895,8 +897,8 @@ img {
 
 .about-us p {
     /*font-size: 0.9375em;*/
-    line-height: 1.625em;
-    padding: 15px 0;
+    line-height: 1.65em;
+    padding: 16px 0;
 }
 
 .about-us .about-us-list {
@@ -1440,7 +1442,7 @@ img {
     font-family: 'Raleway', sans-serif;
     font-size: 34px;
     letter-spacing: -1px;
-    margin: 0 0 15px;
+    margin: 20 0 15px;
     text-align: center;
     text-transform: uppercase;
 }
@@ -1459,17 +1461,17 @@ img {
 /* Portfolio Items */
 
 #portfolio_wrapper {
-    position: relative;
-    padding: 0;
-    width: 100%;
-    margin: 0 auto;
+    position: static;
+    padding: 10;
+    width: 98%;
+    margin: auto auto;
     display: block;
 }
 
 #portfolio_wrapper .one-four {
-    margin: 0!important;
+    margin: 0;
     line-height: 0;
-    width: 25%;
+    width: 50%;
     padding: 0;
     position: relative;
 }
@@ -1484,6 +1486,8 @@ img {
     overflow: hidden;
     display: block;
     position: relative;
+    width: 400px;
+    height: 273px; 
 }
 
 .portfolio-item .portfolio_img img {
@@ -1656,6 +1660,7 @@ img {
     height: auto;
     z-index: 100;
     position: absolute;
+    left: 30px;
     right: 30px;
     top: 30px;
 }
@@ -1703,7 +1708,7 @@ img {
 }
 
 .project-section-title h1 {
-    margin-bottom: 5px!important;
+    margin-bottom: 15px;
     letter-spacing: 1px;
     font-family: 'Raleway', sans-serif;
 }
@@ -1754,7 +1759,7 @@ img {
 /* Portfolio Normal Expander */
 
 .project-description {
-    margin-top: 40px;
+    margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
     height: auto;
@@ -1772,7 +1777,7 @@ img {
     text-align: center;
     border-top: 1px solid #ddd;
     margin-top: 20px;
-    padding: 55px 0 20px 0;
+    padding: 10px 0 20px 0;
 }
 
 .project-description h5 {
