--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ h2 {
     color: #222222;
     font-family: 'Raleway', sans-serif;
     font-weight: normal;
-    margin: 0px 0 20px 0;
+    margin: 60px 0 20px 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -263,10 +263,15 @@ h6 {
 }
 
 p {
+    font-size: 16px;
     line-height: 24px;
     margin: 0;
 }
 
+.img-circle {
+    border-radius: 50%;
+}
+ 
 
 /* Header Styles
 ---------------------------------*/
@@ -513,10 +518,10 @@ a.read_more:hover {
 ---------------------------------*/
 
 #skills {
-    padding: 60px 0px;
+    padding: 20px 0px;
     background: url("../img/spacexRocket.jpeg") no-repeat center;
     background-size: cover;
-    height: 600px;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -529,6 +534,7 @@ a.read_more:hover {
 
 .skills_wrapper {
     padding: 40px 0 40px;
+    
 }
 
 .skills_section {}
@@ -538,6 +544,7 @@ a.read_more:hover {
     padding-left: 15px;
     padding-right: 15px;
     position: relative;
+    
 }
 
 .skills_icon {
@@ -584,6 +591,152 @@ a.read_more:hover {
     margin: 0 0 35px 0;
 }
 
+
+/* Timeline 
+---------------------------------*/
+
+
+#timeline {
+    list-style: none;
+    position: relative
+    
+    
+  }
+  #timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 2px;
+    background-color: #CC4646;
+    left: 50%;
+    margin-left: -1.5px;
+  }
+  #timeline .clearFix {
+    clear: both;
+    height: 0;
+  }
+  #timeline .timeline-badge {
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    font-size: 0.9em;
+    text-align: center;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #CC4646;
+    z-index: 36;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+  }
+  #timeline .timeline-badge span.timeline-balloon-date-day {
+    font-size: 1.2em
+       
+  }
+  #timeline .timeline-badge span.timeline-balloon-date-month {
+    font-size: 15px;
+    position: relative;
+    top: 15px;  
+    display: inherit;
+  }
+
+  #timeline .timeline-badge.timeline-filter-movement {
+    background-color: #ffffff;
+    font-size: 1.7em;
+    height: 35px;
+    margin-left: -18px;
+    width: 35px;
+    top: 0px;
+  }
+  #timeline .timeline-badge.timeline-filter-movement a span {
+    color: #46ccb6;
+    font-size: 0em;
+    top: 1px;
+  }
+  #timeline .timeline-badge.timeline-future-movement {
+    background-color: #ffffff;
+    height: 35px;
+    width: 35px;
+    font-size: 1.7em;
+    top: -16px;
+    margin-left: -18px;
+  }
+  #timeline .timeline-badge.timeline-future-movement a span {
+    color: #CC4646;
+    font-size: 1em;
+    top: 20px;
+    left: 1px;
+  }
+  #timeline .timeline-movement {
+    border-bottom: dashed 1px #CC4646;
+    position: relative;
+  }
+  #timeline .timeline-movement.timeline-movement-top {
+    height: 60px;
+  }
+  #timeline .timeline-movement .timeline-item {
+    padding: 20px 0;
+  }
+#timeline .timeline-movement .timeline-item .timeline-panel {
+    border: 1px solid #d4d4d4;
+    border-radius: 2px;
+    background-color: #FFFFFF;
+    color: #666;
+    padding: 10px;
+    position: relative;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);    
+  }
+
+  #timeline .timeline-movement .timeline-item .timeline-panel img{
+     width: 25px;
+     height: auto;
+     position: relative;
+     margin: 0 5px 0;
+     
+  }
+
+/*  #timeline .timeline-movement .timeline-item .timeline-panel:hover {
+    animation-name: example;
+    animation-duration: 2s
+  } 
+
+@keyframes example {
+    from {background-color: #E0F8E6;}
+    to {background-color: #FBEFF2;}
+    
+  }
+*/
+  #timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
+    font-size: 0.92em;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    
+  }
+ 
+  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul {
+    text-align: right;
+  }
+/*  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li {
+    color: #666;   
+  }*/
+  #timeline .timeline-movement .timeline-item .timeline-panel.credits .timeline-panel-ul li span.importo {
+    color: #2a610d;
+    font-size: 1.2em;
+  }
+  #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul {
+    text-align: left;
+  }
+  #timeline .timeline-movement .timeline-item .timeline-panel.debits .timeline-panel-ul li span.importo {
+    color: #CC4646;
+    font-size: 1.2em;
+  }
+  
 
 /* Latest Work
 ---------------------------------*/
@@ -678,6 +831,19 @@ a.contact_btn:hover {
 
 #Portfolio {
     padding: 60px 0px;
+    background-size: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: center; 
+}
+
+#portfolio_wrapper {
+    display: block
+    background-color: blueviolet;
+    width: 100%;
+    margin: 2%;
+    position: center;
 }
 
 .Portfolio-nav {
@@ -901,7 +1067,7 @@ img {
 }
 
 .about-us p {
-    /*font-size: 0.9375em;*/
+    font-size: 1.0em;
     line-height: 1.65em;
     padding: 16px 0;
 }
@@ -913,6 +1079,7 @@ img {
 }
 
 .about-us .points {
+    font-size: 0.93em;
     position: relative;
     list-style-type: none;
     padding: 5px 0 5px 30px;
@@ -931,6 +1098,8 @@ img {
 .about-us-link a:first-child {
     margin-left: 0;
 }
+
+
 
 
 /* Team
@@ -1058,9 +1227,6 @@ img {
     color: #dd4b39;
 }
 
-.img-circle {
-    border-radius: 50%;
-}
 
 .centered {
     text-align: center;
@@ -1083,7 +1249,7 @@ img {
 }
 
 #aboutUs {
-    padding: 60px 0;
+    padding: 30px 0;
     background: #fff;
 }
 
@@ -1387,7 +1553,7 @@ img {
 /*new_profolio*/
 
 
-/* Portfolio */
+/* Portfolio 
 
 .container.portfolio_title {
     padding-bottom: 0px;
@@ -1397,7 +1563,7 @@ img {
     padding: 60px 0 40px;
 }
 
-
+*/
 /* Portfolio Filters */
 
 #filters {
@@ -1465,13 +1631,6 @@ img {
 
 /* Portfolio Items */
 
-#portfolio_wrapper {
-    position: static;
-    width: 100%;
-    margin-left: 2%;
-    display: block;
-    place-items: center;
-}
 
 #portfolio_wrapper .one-four {
     margin: 0;
@@ -2099,3 +2258,4 @@ img.img.img-circle.lt-box {
     width: 60px;
     height: auto;
 }
+
