--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,11 @@ a:active {
 }
 
 .grid figure figcaption {
-    padding: 2em;
+    padding: 4em;
     color: #fff;
     text-transform: none;
-    font-size: 1.4em;
-    word-wrap: break-word;
+    font-size: 1.2em;
+    word-wrap: normal;
     backface-visibility: hidden;
 }
 
@@ -125,14 +125,17 @@ a:active {
 }
 
 .grid figure h2 {
-    word-spacing: -0.15em;
+    word-spacing: normal;
     width: auto;
     position: absolute;
     top: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    text-transform: capitalize;
+    left: 15px;
+    right: 15px;    
+    word-wrap: normal;
     font-weight: normal;
+    font-size: 20px;    
+    font-family:Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
 }
 
 .grid figure h2 span {
@@ -146,7 +149,7 @@ a:active {
 }
 
 .grid figure p {
-    letter-spacing: 1px;
+    letter-spacing: normal;
     font-size: 68.5%;
 }
 
@@ -177,7 +180,7 @@ figure.effect-oscar figcaption {
 figure.effect-oscar figcaption::before {
     position: fixed;
     top: 0px;
-    right: 13px;
+    right: 10px;
     bottom: 10px;
     left: 10px;
     border: 2px solid #fff;
@@ -199,7 +202,7 @@ figure.effect-oscar p {
 }
 
 figure.effect-oscar:hover h2 {
-    transform: translate3d(0, 20%, 0);
+    transform: translate3d(0, 0%, 0);
     color: #fff;
 }
 
