--- a/css/style.css
+++ b/css/style.css
@@ -701,7 +701,7 @@ a.read_more:hover {
      
   }
 
-/*  #timeline .timeline-movement .timeline-item .timeline-panel:hover {
+  #timeline .timeline-movement .timeline-item .timeline-panel:hover {
     animation-name: example;
     animation-duration: 2s
   } 
@@ -711,7 +711,7 @@ a.read_more:hover {
     to {background-color: #FBEFF2;}
     
   }
-*/
+
   #timeline .timeline-movement .timeline-item .timeline-panel .timeline-panel-ul {
     font-size: 0.92em;
     list-style: none;
@@ -841,7 +841,7 @@ a.contact_btn:hover {
 
 #portfolio_wrapper {
     display: block;
-    background-color: blueviolet;
+    background-color: #fff;
     width: 100%;
     margin: 2%;
     position: center;
