--- a/css/style.css
+++ b/css/style.css
@@ -302,11 +302,11 @@ p {
     width: 125px;
     height: auto;
 }
-
+/*
 .res-nav_click {
-    display: none;
+        display: none;
 }
-
+(/
 
 /* Nav Styles
 ---------------------------------*/
